runtime/pavex_macros/tests/path_params/fail/serde_conflict_before_route_params_without_attributes.rs
#[derive(serde::Deserialize)]
#[pavex_macros::PathParams]
struct MyStruct {
    field1: i32,
    field2: String,
}

fn main() {}
